features/testing vscode github gui

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </svg>
                                 <div class="shop">
                                     <span>Shopping Cart</span>
-                                    <span>0,00 EUR</span>
+                                    <span>0,00 EU</span>
                                 </div>                                
                         </li>
                     </ul>
